fix title line break on smaller screens

--- a/main.css
+++ b/main.css
@@ -83,7 +83,6 @@ h2 {
 	font-size:30pt;
 	color:#000000;
 	letter-spacing:-3;
-	line-height:0px;
     text-align: center;
  }
 table{
